:iphone: :green_apple: : fix on safari mobile

--- a/client/src/mobile/components/MobileApp.scss
+++ b/client/src/mobile/components/MobileApp.scss
@@ -7,6 +7,7 @@
   max-height: 100vh;
   overflow: hidden;
   user-select: none;
+  position: relative;
 
   
   & > {
